--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,9 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&family=Roboto+Mono:wght@100&display=swap');
 html,
 body {
   padding: 0;
   margin: 0;
+
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+    
+    background: #E5E5E5;
+
+   
 }
 
 a {
@@ -12,7 +18,9 @@ a {
 }
 
 * {
+    
   box-sizing: border-box;
+  
 }
 
 @media (prefers-color-scheme: dark) {
